# fastapi-request-parameters

event-booking-api/: main.py  pyproject.toml
event-booking-api/controllers/: event_booking_controller.py
event-booking-api/models/: event_booking_model.py
event-booking-api/routes/: event_booking_route.py
flight-booking/: main.py  pyproject.toml
flight-booking/controllers/: booking_controller.py
flight-booking/models/: booking_model.py
flight-booking/routes/: booking_route.py
payment-processing-api/: main.py  pyproject.toml
payment-processing-api/controllers/: payment_controller.py
payment-processing-api/models/: payment_model.py
payment-processing-api/routes/: payment_route.py
product-search/: main.py  pyproject.toml
product-search/config/: file_config.py
product-search/controllers/: product_controller.py
product-search/data/: products.json
product-search/routes/: product_route.py
user-registration/: main.py  pyproject.toml  test_route.py
user-registration/config/: file_config.py
user-registration/controllers/: user_controller.py
user-registration/data/: users.json
user-registration/models/: user_model.py
user-registration/routes/: user_route.py
vehicle-inventory-api/: main.py  pyproject.toml
vehicle-inventory-api/config/: file_config.py
vehicle-inventory-api/controllers/: vehicle_controller.py
vehicle-inventory-api/data/: vehicles.json
vehicle-inventory-api/routes/: vehicle_route.py
