[tool.poetry]
name = "payment-processing-api"
version = "0.1.0"
description = ""
authors = ["Chibuikem Iroaganachi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic-extra-types = "^2.6.0"
payment = "^0.0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
